<resources>
    <string name="app_name">Senior Reminder</string>
    <string name="usernameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="loginBtnHint">Login</string>
    <string name="actBtnText">Create Account</string>
    <string name="newUsernameHint">Username</string>
    <string name="emailHint">Email Address</string>
    <string name="newPasswordHint">Password</string>
    <string name="logoutBtnText">Logout</string>
    <string name="medicationTrackingText">Medication</string>
    <string name="HomeText">Home</string>
    <string name="tasksText">Tasks</string>
    <string name="fluShotText">Flu Shot</string>
    <string name="medNameHint">Name of Medication</string>
    <string name="medDosageHint">Dosage</string>
    <string name="medBrandHint">Brand of Medication</string>
    <string name="medTypeHint">Type of Medication</string>
    <string name="editMedicationBtnText">Save Changes</string>
    <string name="medCountHint">Current Count of Medication</string>
    <string name="antiobioticTitle">Antibiotics</string>
    <string name="diabeticTitle">Diabetes Medication</string>
    <string name="heartTitle">Heart Medication</string>
    <string name="otherMedTitle">Other Medications</string>
    <string name="dosageUnitText">Dosage Unit</string>
    <string name="mlHInt" />
    <string name="mlText">mL</string>
    <string name="iuText">IU</string>
    <string name="ozText">Oz</string>
    <string name="ingestionTypeText">Liquid, Syringe, Pill?</string>
    <string name="expiryText">Expiry Date?</string>
    <string name="critNumText">Minimum Supply</string>
    <string name="importanceText">Importance (H, M, L)</string>
    <string name="timeText">Time</string>
    <string name="alphaSortText">Alphabetical</string>
    <string name="timeSortText">Chronological</string>
    <string name="customTaskText">Regular Task</string>
    <string name="criticalTaskText">Critical Task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="homeScreenText">Welcome to Your Medication and Tasks App</string>
    <string name="medAddText">Add Medication</string>
    <string name="medListTVText">List of Medications</string>
    <string name="sortText">Sort: </string>
    <string name="tasksMainTVText">Tasks List</string>
    <string name="descriptionText">Description</string>
    <string name="taskNameTVText">Name of Task</string>
    <string name="taskTypeText">Type of Task</string>
    <string name="taskNameText">Name of Task</string>
    <string name="taskImportanceSelectorText">Select an Importance</string>
    <string name="intensityTVText">Selected Intensity: 0</string>
    <string name="taskAddText">Add Task</string>
    <string name="googleMapsKey" translatable="false">AIzaSyB_qsP8AOP_P0MdlPz-48TDaJYjTP3vbjo</string>
    <string name="fluShotSearchHint">Enter location of nearby clinic</string>
    <string name="title_activity_flu_shot">Map</string>
    <string name="fluShotMainText">Flu Shots</string>
    <string name="clinicSVHint">Enter location</string>
</resources>
